# sparc-claude-enhanced

./: .env.example  .gitignore  .sparc_file_registry_financial_analyzer_ultrathink.json  AGENT_AUDIT_COMPLETE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_GUIDES.md  MEMORY_ENHANCED_SPARC_README.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  SPARC_NATIVE_README.md  SPARC_PROCESS_FAILURE_ANALYSIS.md  SPARC_PROJECT_STATUS_COMPREHENSIVE.md  analyze_supabase.py  claudeswarmpaper.md  context7_test.md  context7_test_commands.txt  create_missing_tables.sql  docker-compose.yml  enhanced_3d_flight_simulator.html  fix_existing_table_schemas.sql  fix_final_15_percent.py  install.sh  orchestrator.py  pyproject.toml  requirements.txt  run_full_autonomous_workflow.py  setup.sql  sparc-init-enhanced  sparc-init-enhanced-simple  test_complete_sparc_workflow.py  test_enhanced_3d_flight_simulator.py  test_grocery_app_workflow.py  test_memory_enhanced_sparc.py  test_mistral_memory.py  test_ultrathink_fixes.py  workflow_results_flight_sim_e9613fca.json
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/: .env.example  COMPLETE_SYSTEM_KNOWLEDGE.md  INSTALLATION_INSTRUCTIONS.md  LICENSE  PACKAGE_SUMMARY.md  README.md  SPARC_CLI_SETUP.md  package.json  pyproject.toml  supabase_schema.sql  supabase_schema_fixed.sql
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/: __init__.py  base_agent.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/bmo/: bmo_contract_verifier.py  bmo_e2e_test_generator.py  bmo_holistic_intent_verifier.py  bmo_intent_triangulator.py  bmo_system_model_synthesizer.py  bmo_test_suite_generator.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/coders/: coder_framework_boilerplate.py  coder_test_driven.py  debugger_targeted.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/orchestrators/: architecture_phase.py  bmo_completion_phase.py  completion_documentation.py  completion_maintenance.py  goal_clarification.py  pseudocode_phase.py  refinement_implementation.py  refinement_testing.py  specification_phase.py  state_scribe.py  uber.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/researchers/: edge_case_synthesizer.py  research_planner_strategic.py  researcher_high_level_tests.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/reviewers/: code_comprehension_assistant_v2.py  devils_advocate_critical_evaluator.py  optimizer_module.py  security_reviewer_module.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/testers/: chaos_engineer.py  tester_tdd_master.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/agents/writers/: architect_highlevel_module.py  docs_writer_feature.py  pseudocode_writer.py  spec_to_testplan_converter.py  spec_writer_comprehensive.py  spec_writer_from_examples.py  (+1 more)
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/claude-commands/: sparc-switch.md  sparc.md
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/docker/: docker-compose.yml
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/docs/: EXAMPLES.md  INSTALLATION.md  SUPABASE_SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/scripts/: build.py
archive/ultimate-pkg-extract/sparc-cli-ultimate.pkg/usr/local/sparc/sparc_cli/: __init__.py  auth.py  cli.py  docker_manager.py  installer.py  interactive_picker.py  orchestrator.py  project.py  project_initializer.py  research_utils.py  security.py  simple_orchestrator.py  supabase_manager.py
(+488 files in other folders)
