[project]
name = "sparc-cli"
version = "1.0.0"
description = "Global SPARC CLI - Autonomous Software Development with 36 AI Agents"
readme = "README.md"
authors = [
    {name = "SPARC Development Team", email = "sparc@example.com"},
]
keywords = ["ai", "autonomous", "development", "claude", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "qdrant-client>=1.7.0",
    "mistralai>=0.0.8",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
    "asyncio-mqtt>=0.16.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "pathspec>=0.11.0",
    "platformdirs>=3.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
sparc = "sparc_cli.cli:main"
sparc-install = "sparc_cli.installer:main"

[project.urls]
Homepage = "https://github.com/your-org/sparc-cli"
Documentation = "https://sparc-cli.readthedocs.io"
Repository = "https://github.com/your-org/sparc-cli"
Issues = "https://github.com/your-org/sparc-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sparc_cli"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D104", "E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"